applications/otel-external/resources/otelcol-external-grpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: otelcol-external-grpc-ingress
  annotations:
    haproxy.org/server-proto: "h2"
    haproxy.org/ssl-redirect: "true"

spec:
  ingressClassName: haproxy
  tls:
    - secretName: otelcol-external-tls
      hosts:
        - otel-grpc.ggrel.net
  rules:
    - host: otel-grpc.ggrel.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otelcol-external-collector
                port:
                  number: 4317
