applications/otel-external/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: otelcol-external
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: opentelemetry-collector
      app.kubernetes.io/instance: otel-external.otelcol-external
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: haproxy-controller
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: haproxy-ingress
              app.kubernetes.io/name: kubernetes-ingress
      ports:
        - port: 4317
          protocol: TCP
        - port: 4318
          protocol: TCP
